backup-ingress/ab5bb61c81ecc4e8a97b50c271197402/ingress-adicionais-ingress-psd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"default:adicionais-master-svc","ingressName":"default:adicionais-ingress","hostname":"adicionais.psd.pernambucanas.com.br","allNodes":false}]'
    kubernetes.io/ingress.class: nginx
  name: adicionais-ingress
  namespace: default
spec:
  rules:
  - host: adicionais.psd.pernambucanas.com.br
    http:
      paths:
      - backend:
          service:
            name: adicionais-master-svc
            port:
              number: 80
        pathType: ImplementationSpecific
